fix footer gap

--- a/css/project-footer.css
+++ b/css/project-footer.css
@@ -49,7 +49,7 @@ footer {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 0.5em;
+  gap: 2em;
   margin-top: 1.5em;
   text-align: left;
 }
